fix about me spacing

--- a/src/assets/scss/base/_variables.scss
+++ b/src/assets/scss/base/_variables.scss
@@ -22,6 +22,7 @@ $vue:     #47B784;
 $mongo:   #52A947;
 $webpack: #2479BE;
 $psql:    #336791;
+$wp:      #494949;
 $adobe-ps:#82BCFB;
 $adobe-ai:#E16B17;
 
